--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,3 @@
-/* index.css */
-
 /* Global Styles */
 
 /* Sets the default margin to 0, enables flexbox layout, sets direction to column,
@@ -112,11 +110,11 @@
 
     background: #f9f9f9; /* Light background */
   border-radius: 10px; /* Rounds the corners */
-  box-shadow: 0 6px 15px rgba(0, 0, 0, 0.1); /* Adds a shadow */
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25); /* Adds a shadow */
   padding: 10px; /* Adds padding */
   text-align: center; /* Centers the text */
   transition: transform 0.3s, box-shadow 0.3s; /* Adds hover effects */
-  margin-bottom: 70px; /* Adds space below each block */
+  margin-bottom: 20px; /* Adds space below each block */
   }
   
   /* Slightly enlarges mission blocks on hover */
@@ -157,11 +155,11 @@
 
     background: #f9f9f9; /* Light background */
   border-radius: 10px; /* Rounds the corners */
-  box-shadow: 0 6px 15px rgba(0, 0, 0, 0.1); /* Adds a shadow */
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25); /* Adds a shadow */
   padding: 30px; /* Adds padding */
   transition: transform 0.3s, box-shadow 0.3s; /* Adds hover effects */
   width: 400px; /* Sets a fixed width */
-  margin-bottom: 70px; /* Adds space below each block */
+  margin-bottom: 20px; /* Adds space below each block */
   text-align: center;
   }
   
@@ -187,11 +185,11 @@
   .model-section {
     background: #f9f9f9; /* Light background */
   border-radius: 10px; /* Rounds the corners */
-  box-shadow: 0 6px 15px rgba(0, 0, 0, 0.1); /* Adds a shadow */
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25); /* Adds a shadow */
   padding: 10px; /* Adds padding */
   text-align: center; /* Centers the text */
   transition: transform 0.3s, box-shadow 0.3s; /* Adds hover effects */
-  margin-bottom: 70px; /* Adds space below each block */
+  margin-bottom: 20px; /* Adds space below each block */
   }
   
   /* Slightly enlarges the model section on hover */
@@ -208,14 +206,14 @@
   /* Sets background color, positions absolutely at the bottom,
        centers text, and ensures full width */
        .instructions-section {
-        background-color: #D3D3D3; /* Unified background color */
+        background-color: #E3E8EF; /* Unified background color */
         padding: 20px; /* Increase padding for readability */
         text-align: center;
         transition: transform 0.3s, box-shadow 0.3s; /* Adds hover effects */
-        box-shadow: 0 6px 15px rgba(0, 0, 0, 0.4); /* Adds a shadow */
+        box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);/* Adds a shadow */
         position: relative;
         border-radius: 10px; /* Add smooth corners */
-        margin-bottom: 70px;
+        margin-bottom: 20px;
       }
 
       .instructions-section:hover {
@@ -534,6 +532,32 @@
     background-color: #061d48; /* Changes the background color on hover */
     transform: translateY(-3px); /* Lifts the button on hover */
   }
+
+  /* Text Input */
+.text-input {
+  margin-top: 20px;
+  width: 750px; /* Match the width of the upload box */
+  margin-left: -120px;
+}
+
+/* Text Box */
+.text-box {
+  width: 100%; /* Ensure it matches the width of its container */
+  height: 200px; /* Set a fixed height */
+  border: 2px dashed #082c6c; /* Matching border style */
+  border-radius: 12px; /* Rounded corners */
+  padding: 15px; /* Add padding inside */
+  resize: none; /* Disable resize to prevent stretching */
+  overflow-y: scroll; /* Vertical scrollbar for overflow */
+  font-size: 16px; /* Font size */
+  line-height: 1.5; /* Line height for readability */
+}
+
+  
+  
+  
+  
+  
   
   /* Loading Spinner */
   
@@ -1565,25 +1589,18 @@
     /* Adjusts the content container to use 80% of viewport width
          and centers it */
     .content-container {
-      width: 85vw;
+      width: 80vw;
       margin-left: auto;
     }
   
-    .mission-block{
-      margin-bottom: 150px;
-    }
     /* Increases the bottom margin of the model section */
     .model-section {
-      margin-bottom: 100px;
+      margin-bottom: 300px;
     }
   
-    .Recent-bills-line{
-      width: 48%;
-    }
-
     /* Adjusts the padding of the instructions section */
     .instructions-section {
-      bottom: 50px; /* Align it to the bottom */
+      bottom: 100px; /* Align it to the bottom */
     }
   
     /* Adds padding to instruction items */
@@ -1832,26 +1849,18 @@
     /* Adjusts the content container to use 80% of viewport width
          and centers it */
     .content-container {
-      width: 85vw;
+      width: 80vw;
       margin-left: auto;
     }
-    
-    .mission-block{
-      margin-bottom: 130px;
-    }
-
+  
     /* Increases the bottom margin of the model section */
     .model-section {
-      margin-bottom: 100px;
+      margin-bottom: 300px;
     }
   
-    .Recent-bills-line{
-      width: 48%;
-    }
-    
     /* Adjusts the padding of the instructions section */
     .instructions-section {
-      margin-bottom: 60px; /* Align it to the bottom */
+      bottom: 100px; /* Align it to the bottom */
     }
   
     /* Adds padding to instruction items */
@@ -2357,7 +2366,7 @@
          adds right margin, and sets font size */
     .content-container {
       width: 90vw;
-      margin-left: 20px;
+      margin-left: auto;
       font-size: 14px;
     }
   
